added rating score to product.html